syntax = "proto3";
package msg.qry;

import "Qry.CommissionRate.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "QryCommissionRateMsgProto";

option csharp_namespace = "Evelynn.Base.Query";

message QryCommissionRateMsg {
	.qry.QryCommissionRateField commission_rate = 1;
	int32 request_id = 2;
}