syntax = "proto3";
package msg.qry;

import "Qry.Instrument.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "QryInstrumentMsgProto";

option csharp_namespace = "Evelynn.Base.Proto";

message QryInstrumentMsg {
	.qry.QryInstrumentField instrument = 1;
	int32 request_id = 2;
}