syntax = "proto3";
package msg.qry;

import "Qry.MarginRate.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "QryMarginRateMsgProto";

option csharp_namespace = "Evelynn.Base.Query";

message QryMarginRateMsg {
	.qry.QryMarginRateField margin_rate = 1;
	int32 request_id = 2;
}