syntax = "proto3";
package msg.req;

import "Req.Authenticate.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "ReqAuthenticateMsgProto";

option csharp_namespace = "Evelynn.Base.Request";

message ReqAuthenticateMsg {
	.req.AuthenticateField authenticate = 1;
	int32 request_id = 2;
}