syntax = "proto3";
package msg.req;

import "Req.InputOrder.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "ReqOrderInsertMsgProto";

option csharp_namespace = "Evelynn.Base.Proto";

message ReqOrderInsertMsg {
	.req.InputOrderField input_order = 1;
	int32 request_id = 2;
}
