syntax = "proto3";
package msg.req;

import "Req.SettlementConfirm.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "ReqSettlementConfirmMsgProto";

option csharp_namespace = "Evelynn.Base.Request";

message ReqSettlementConfirmMsg {
	.req.SettlementConfirmField confirm = 1;
	int32 request_id = 2;
}