syntax = "proto3";
package msg.req;

import "Req.UserLogout.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "ReqUserLogoutMsgProto";

option csharp_namespace = "Evelynn.Base.Request";

message ReqUserLogoutMsg {
	.req.UserLogoutField logout = 1;
	int32 request_id = 2;
}
