syntax = "proto3";
package req;

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "SettlementConfirmFieldProto";

option csharp_namespace = "Evelynn.Base.Proto";

message SettlementConfirmField {
	string broker_id	= 1;
	string investor_id = 2;
}
