syntax = "proto3";
package rtn;

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "TradeFieldProto";

option csharp_namespace = "Evelynn.Base.Return";

message TradeField {
	string broker_id = 1;
	string investor_id = 2;
	string instrument_id = 3;
	string order_ref = 4;
	string user_id = 5;
	string trade_id = 6;
	int32 direction = 7;
	int32 offset_flag = 8;
	int32 hedge_flag = 9;
	double price = 10;
	int32 volume = 11;
	string trade_date = 12;
	string trade_time = 13;
	string order_local_id = 14;
	string trading_day = 15;
	int32 broker_order_seq = 16;
}
